--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ favicon: favicon.png
 repository: Aaronleb/aaronleb.github.io
 github_url: https://github.com/Aaronleb/
 cnblog_url:
-url: http:
+url: https://Aaronleb.git.io
 enforce_ssl:
 
 ## Gem
