--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ subtitle: 分享技术，品味人生
 name: 那年夏天 
 email: baoer.lee@foxmail.com
 description: 本站是那年夏天~的技术分享博客。内容涵盖生活故事、Java后端技术、Spring Boot、Spring Cloud、微服务架构、大数据演进、高可用架构、中间件使用、系统监控等相关的研究与知识分享。
-keywords: ityouknow,纯洁的微笑,Spring,Spring Boot,Spring Cloud,MongoDB,Jvm,Docker,生活故事,架构,大数据,一线,FastDFS,开发者,编程,代码,开源,IT网站,Developer,Programmer,Coder,Geek,IT技术博客,Java,Python,
+keywords: aaronleb,那年夏天,Spring,Spring Boot,Spring Cloud,MongoDB,Jvm,Docker,生活故事,架构,大数据,一线,FastDFS,开发者,编程,代码,开源,IT网站,Developer,Programmer,Coder,Geek,IT技术博客,Java,Python,
 encoding: "utf-8"
 favicon: favicon.png 
 
@@ -83,39 +83,39 @@ navs:
 
 
 # labels. my blog key words
-labels:
-
-  -
-    href: /share/2017/10/01/resource-sharing.html
-    name: 资源
-
-  -
-    href: /life.html
-    name: 故事
-
-  -
-    href: /arch.html
-    name: 架构
-    
-  -
-    href: /jvm.html
-    name: Jvm
-
-  -
-    href: /fastdfs.html
-    name: FastDFS
-
-  -
-    href: /mongodb.html
-    name: MongoDB
-
-  -
-    href: /docker.html
-    name: Docker
-
-  -
-    href: /open-source.html
-    name: Code   
+#labels:
+#
+#  -
+#    href: /share/2017/10/01/resource-sharing.html
+#    name: 资源
+#
+#  -
+#    href: /life.html
+#    name: 故事
+#
+#  -
+#    href: /arch.html
+#    name: 架构
+#
+#  -
+#    href: /jvm.html
+#    name: Jvm
+#
+#  -
+#    href: /fastdfs.html
+#    name: FastDFS
+#
+#  -
+#    href: /mongodb.html
+#    name: MongoDB
+#
+#  -
+#    href: /docker.html
+#    name: Docker
+#
+#  -
+#    href: /open-source.html
+#    name: Code
 
 # selected articles
 classes:
