--- a/_config.yml
+++ b/_config.yml
@@ -166,20 +166,20 @@ comments_provider: gitalk
 # !!!重要!!! 请修改下面这些信息为你自己申请的
 # !!!Important!!! Please modify infos below to yours
 # https://disqus.com
-disqus:
-    username: ityouknow
+#disqus:
+#    username: ityouknow
 # https://imsun.net/posts/gitment-introduction/
-gitment:
-    owner: ityouknow
-    repo: blog-comments
-    oauth:
-        client_id: 61bfc53d957e74e78f8f
-        client_secret: 31c61e66cdcc9ada8db2267ee779d0bdafac434c
+#gitment:
+#    owner: ityouknow
+#    repo: blog-comments
+#    oauth:
+#        client_id: 61bfc53d957e74e78f8f
+#        client_secret: 31c61e66cdcc9ada8db2267ee779d0bdafac434c
 # https://github.com/gitalk/gitalk#install
 gitalk:
     owner: ityouknow
     repo: blog-comments
-    clientID: 61bfc53d957e74e78f8f
-    clientSecret: 31c61e66cdcc9ada8db2267ee779d0bdafac434c
+    clientID: d6225b4f1c89eccbfcce
+    clientSecret: f8b9156b1de002b5474a8c752b5c34d5685e3263
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : true
