--- a/_config.yml
+++ b/_config.yml
@@ -177,9 +177,9 @@ comments_provider: gitalk
 #        client_secret: 31c61e66cdcc9ada8db2267ee779d0bdafac434c
 # https://github.com/gitalk/gitalk#install
 gitalk:
-    owner: ityouknow
+    owner: aaronleb
     repo: blog-comments
-    clientID: d6225b4f1c89eccbfcce
-    clientSecret: f8b9156b1de002b5474a8c752b5c34d5685e3263
+    clientID: fdf12052932c162e3a20
+    clientSecret: dc9f2dc30bd7289997249b500a3dac839f39ff10
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : true
